# test

./: .env.example  .replit  main.py  pyproject.toml
attached_assets/: devops_improvement_plan_1750007109507.md  project_structure_1749999658626.txt  requirements_dev_txt_1749999658570.txt  requirements_txt_1749999658610.txt  trading_simulator_compose_1749999658639.txt  trading_simulator_dockerfile_1749999658653.txt
config/: development.env  production.env
src/: __init__.py
src/api/: __init__.py  main.py
src/api/models/: __init__.py  schemas.py
src/api/routes/: __init__.py  ai_analysis.py  market.py  monitoring.py  simulation.py
src/core/: __init__.py  config.py  exceptions.py  logging_config.py
src/services/: __init__.py  ai_inference_service.py  exchange_service.py
src/ui/: __init__.py  dashboard.py
